[gd_scene load_steps=37 format=3 uid="uid://x0qknhn001ny"]

[ext_resource type="Script" path="res://Characters/EnemyScene/ChainBot/chain_bot.gd" id="1_tidxg"]
[ext_resource type="Texture2D" uid="uid://cwd7emi5qalr" path="res://pixel/Ball and Chain Bot/attack.png" id="2_d3gdm"]
[ext_resource type="Texture2D" uid="uid://eocdnrvniqwk" path="res://pixel/Ball and Chain Bot/idle.png" id="4_ri7fr"]
[ext_resource type="Texture2D" uid="uid://karrtpwi3aej" path="res://pixel/Ball and Chain Bot/hit.png" id="5_vfcc5"]
[ext_resource type="Texture2D" uid="uid://d4gjms50gs8ha" path="res://pixel/Ball and Chain Bot/death.png" id="6_gm04m"]
[ext_resource type="Texture2D" uid="uid://psonvg04ykh0" path="res://pixel/Ball and Chain Bot/run.png" id="6_ipwo6"]
[ext_resource type="Script" path="res://Characters/EnemyScene/ChainBot/GetHitState.gd" id="6_p3m7k"]
[ext_resource type="Script" path="res://Characters/EnemyScene/ChainBot/Whip.gd" id="7_cdtek"]
[ext_resource type="Script" path="res://Characters/EnemyScene/ChainBot/ChainBotStateMachine.gd" id="9_5ebm2"]
[ext_resource type="Script" path="res://Characters/EnemyScene/ChainBot/Attack.gd" id="9_uc5lw"]
[ext_resource type="Script" path="res://Characters/EnemyScene/ChainBot/ChainBotHealth.gd" id="10_iyhvp"]
[ext_resource type="Script" path="res://Characters/EnemyScene/ChainBot/ChaseState.gd" id="10_xgv51"]
[ext_resource type="Script" path="res://Characters/EnemyScene/ChainBot/CollisionDirect.gd" id="12_d03lg"]
[ext_resource type="Script" path="res://Characters/EnemyScene/ChainBot/detech.gd" id="13_5naxt"]
[ext_resource type="Script" path="res://Characters/MainScene/State.gd" id="13_lpbap"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_otrbu"]
radius = 7.0
height = 25.0

[sub_resource type="Animation" id="Animation_y08rv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_861cb"]
resource_name = "attack"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_d3gdm")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_k3wts"]
resource_name = "dead"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_gm04m")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_4fhmr"]
resource_name = "get_hit"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_vfcc5")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_myj34"]
resource_name = "idle"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_ri7fr")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_3xwtb"]
resource_name = "run"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_ipwo6")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_726pg"]
_data = {
"RESET": SubResource("Animation_y08rv"),
"attack": SubResource("Animation_861cb"),
"dead": SubResource("Animation_k3wts"),
"get_hit": SubResource("Animation_4fhmr"),
"idle": SubResource("Animation_myj34"),
"run": SubResource("Animation_3xwtb")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bbupf"]
animation = &"dead"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_b8tyj"]
animation = &"get_hit"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rs1q3"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8pb3q"]
animation = &"run"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4ox5h"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ef06e"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_donop"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jbl6a"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_lq6oj"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_62ugc"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_dtyj2"]
states/dead/node = SubResource("AnimationNodeAnimation_bbupf")
states/dead/position = Vector2(696, 100)
states/get_hit/node = SubResource("AnimationNodeAnimation_b8tyj")
states/get_hit/position = Vector2(524, 100)
states/idle/node = SubResource("AnimationNodeAnimation_rs1q3")
states/idle/position = Vector2(367, 100)
states/run/node = SubResource("AnimationNodeAnimation_8pb3q")
states/run/position = Vector2(367, 191)
transitions = ["idle", "get_hit", SubResource("AnimationNodeStateMachineTransition_4ox5h"), "get_hit", "idle", SubResource("AnimationNodeStateMachineTransition_ef06e"), "get_hit", "dead", SubResource("AnimationNodeStateMachineTransition_donop"), "Start", "idle", SubResource("AnimationNodeStateMachineTransition_jbl6a"), "idle", "run", SubResource("AnimationNodeStateMachineTransition_lq6oj"), "run", "idle", SubResource("AnimationNodeStateMachineTransition_62ugc")]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dxnk1"]
size = Vector2(43, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8yg55"]
size = Vector2(121.5, 13)

[node name="ChainBot" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_tidxg")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(4, -1)
texture = ExtResource("4_ri7fr")
flip_h = true
vframes = 5
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
shape = SubResource("CapsuleShape2D_otrbu")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_726pg")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_dtyj2")
anim_player = NodePath("../AnimationPlayer")

[node name="Health" type="Node" parent="."]
script = ExtResource("10_iyhvp")

[node name="ChainBotStateMachine" type="Node" parent="." node_paths=PackedStringArray("curr_state", "main", "at")]
script = ExtResource("9_5ebm2")
curr_state = NodePath("Idle")
main = NodePath("..")
at = NodePath("../AnimationTree")

[node name="Idle" type="Node" parent="ChainBotStateMachine"]
script = ExtResource("13_lpbap")

[node name="GetHit" type="Node" parent="ChainBotStateMachine" node_paths=PackedStringArray("enemy_health", "dead_state")]
script = ExtResource("6_p3m7k")
enemy_health = NodePath("../../Health")
dead_state = NodePath("../Dead")

[node name="Dead" type="Node" parent="ChainBotStateMachine"]
script = ExtResource("13_lpbap")
can_move = false

[node name="Chase" type="Node" parent="ChainBotStateMachine" node_paths=PackedStringArray("return_state")]
script = ExtResource("10_xgv51")
return_state = NodePath("../Idle")

[node name="Attack" type="Node" parent="ChainBotStateMachine" node_paths=PackedStringArray("return_state")]
script = ExtResource("9_uc5lw")
return_state = NodePath("../Idle")

[node name="Timer" type="Timer" parent="ChainBotStateMachine/Attack"]
one_shot = true

[node name="Whip" type="Area2D" parent="." node_paths=PackedStringArray("main", "facing_collision")]
monitoring = false
script = ExtResource("7_cdtek")
main = NodePath("..")
facing_collision = NodePath("CollisionShape2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Whip"]
position = Vector2(-28, 4)
shape = SubResource("RectangleShape2D_dxnk1")
script = ExtResource("12_d03lg")

[node name="detech" type="Area2D" parent="." node_paths=PackedStringArray("main", "return_state", "chase_state")]
script = ExtResource("13_5naxt")
main = NodePath("..")
return_state = NodePath("../ChainBotStateMachine/Idle")
chase_state = NodePath("../ChainBotStateMachine/Chase")

[node name="CollisionShape2D" type="CollisionShape2D" parent="detech"]
position = Vector2(-67, 4)
shape = SubResource("RectangleShape2D_8yg55")

[connection signal="animation_finished" from="AnimationTree" to="Health" method="_on_animation_tree_animation_finished"]
[connection signal="animation_finished" from="AnimationTree" to="ChainBotStateMachine/Chase" method="_on_animation_tree_animation_finished"]
[connection signal="animation_finished" from="AnimationTree" to="ChainBotStateMachine/Attack" method="_on_animation_tree_animation_finished"]
[connection signal="body_entered" from="detech" to="detech" method="_on_body_entered"]
[connection signal="body_exited" from="detech" to="detech" method="_on_body_exited"]
